--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import 'ngx-toastr/toastr';
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
