--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet ></router-outlet>
+<div class=" bg-black    ">
+    <div
+        class="w-full h-[100vh] bg-[url(assets/bg-login-mobile.jpg)] bg-black bg-no-repeat bg-center flex justify-center items-center">
+   <router-outlet ></router-outlet>
+   </div>
+   </div>
