--- a/src/app/authorization/authorization.component.html
+++ b/src/app/authorization/authorization.component.html
@@ -1,1 +1,3 @@
-<p>authorization works!</p>
+<div class="flex flex-col items-center  justify-center ">
+    <h1 class="texto-bungee text-orange-500 text-center font-extrabold mb-8" style="font-size: 50px;">Carregando... </h1>
+</div>
