feat: layout tailwind

--- a/src/app/routes/login/login.component.html
+++ b/src/app/routes/login/login.component.html
@@ -17,5 +17,9 @@
                 <div *ngIf="checkInput('pass', 'required')" class="text-red-700">Senha é obrigatória</div>
             </div>
         </div>
+        <button class="bg-orange-500 hover:bg-orange-400 w-full rounded-md" (click)="login()">
+            <h1 class="texto-bungee text-white text-center text-sm p-2" style="font-size: 30px;">ENTRAR </h1>
+
+        </button>
     </div>
 </div>
