--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-<div class=" bg-black    ">
-    <div
-        class="w-full h-[100vh] bg-[url(assets/bg-login-mobile.jpg)] bg-black bg-no-repeat bg-center flex justify-center items-center">
+<div class="vh-100 vw-100 justify-content-center d-flex align-items-center">
    <router-outlet ></router-outlet>
-   </div>
    </div>
