--- a/src/app/routes/team-score/team-score.component.html
+++ b/src/app/routes/team-score/team-score.component.html
@@ -1,138 +1,103 @@
-<div class="flex flex-col items-center  justify-center ">
-
-    <div class="bg-white shadow-md p-4 w-[75vw] md:w-[400px] rounded-md">
-        <h1 class="texto-bungee text-orange-400 text-center text-sm mb-4" style="font-size: 20px;">Pontuação Autônomo
-        </h1>
-        <div class="texto-passion  text-sm font-bold text-center" style="font-size: 16px;">Marcação dos pixels</div>
-        <div class="grid grid-cols-2 mb-10 gap-x-8 mt-2 " [formGroup]="form">
-            <div class="">
-                <p>
-                    Amarelo:
-                </p>
-                <div class="flex items-center gap-x-2">
-                    <button class="bg-blue-300 hover:bg-blue-400 rounded-md h-7">
-                        <p class="texto-bungee text-white text-center text-sm p-1 " style="font-size: 30px;">-</p>
-                    </button>
-                    <input formControlName="amarelo" [max]="4" type="number"
-                        class="border-zinc-950 input-number border-b-2 py-2 rounded-md w-5" />
-                    <button class="bg-blue-300 hover:bg-blue-400 rounded-md h-7">
-                        <p class="texto-bungee text-white text-center text-sm p-1 " style="font-size: 30px;">+</p>
-                    </button>
+<div class="d-flex flex-column justify-content-center align-items-center h-100">
+    <div class="bg-white shadow rounded p-2 w-75 md:w-400">
+        <h3 class="text-orange-400 text-center ">Pontuação Autônomo</h3>
+        <div class="text-muted text-center font-weight-bold mb-1">Marcação dos pixels</div>
+        <div [formGroup]="form" class="row g-2 md:mx-5 md:px-5 mt-2 ">
+            <div class="col-6 d-flex justify-content-center">
+                <div>
+                    <p class="text-center">Amarelo:</p>
+                    <div class="btn-group" role="group" aria-label="Basic example">
+                        <button type="button" (click)="decrease('form', 'amarelo')"  class="btn btn-white btn-sm">-</button>
+                        <input formControlName="amarelo" type="number" class="form-control rounded-pill" value="0"
+                            min="0" max="4">
+                        <button (click)="increase('form', 'amarelo')" type="button" class="btn btn-white btn-sm">+</button>
+                    </div>
                 </div>
             </div>
-            <div class="">
-                <p>
-                    Roxo:
-                </p>
-                <div class="flex items-center gap-x-2">
-                    <button class="bg-blue-300 hover:bg-blue-400 rounded-md h-7">
-                        <p class="texto-bungee text-white text-center text-sm p-1 " style="font-size: 30px;">-</p>
-                    </button>
-                    <input formControlName="roxo" type="number"
-                        class="border-zinc-950 input-number border-b-2 py-2 rounded-md w-5" />
-                    <button class="bg-blue-300 hover:bg-blue-400 rounded-md h-7">
-                        <p class="texto-bungee text-white text-center text-sm p-1 " style="font-size: 30px;">+</p>
-                    </button>
+            <div class="col-6 d-flex justify-content-center">
+                <div>
+                    <p class="text-center">Roxo?</p>
+                    <div class="btn-group" role="group" aria-label="Basic example">
+                        <button  (click)="decrease('form', 'roxo')" type="button" class="btn btn-white btn-sm">-</button>
+                        <input formControlName="roxo" type="number" class="form-control rounded-pill" value="0" min="0"
+                            max="4">
+                        <button type="button" (click)="increase('form', 'roxo')"  class="btn btn-white btn-sm">+</button>
+                    </div>
                 </div>
             </div>
-            <div class="">
-                <p>
-                    Personalizado?
-                </p>
-                <div class="flex items-center gap-x-2">
-                    <button class="bg-blue-300 hover:bg-blue-400 rounded-md h-7">
-                        <p class="texto-bungee text-white text-center text-sm p-1 " style="font-size: 30px;">-</p>
-                    </button>
-                    <input formControlName="roxo" type="number"
-                        class="border-zinc-950 input-number border-b-2 py-2 rounded-md w-5" />
-                    <button class="bg-blue-300 hover:bg-blue-400 rounded-md h-7">
-                        <p class="texto-bungee text-white text-center text-sm p-1 " style="font-size: 30px;">+</p>
-                    </button>
+            <div class="col-6 d-flex justify-content-center">
+                <div>
+                    <p class="text-center">Personalizado:</p>
+                    <div class="btn-group" role="group" aria-label="Basic example">
+                        <button type="button" (click)="decrease('form', 'personalizado')" class="btn btn-white btn-sm">-</button>
+                        <input formControlName="personalizado" type="number" class="form-control rounded-pill" value="0"
+                            min="0" max="4">
+                        <button (click)="increase('form', 'personalizado')" type="button" class="btn btn-white btn-sm">+</button>
+                    </div>
                 </div>
             </div>
-            <div class="">
-                <p>
-                    Estacionou:
-                </p>
-                <div class="flex items-center gap-x-2">
-                    <button class="bg-blue-300 hover:bg-blue-400 rounded-md h-7">
-                        <p class="texto-bungee text-white text-center text-sm p-1 " style="font-size: 30px;">-</p>
-                    </button>
-                    <input formControlName="roxo" type="number"
-                        class="border-zinc-950 input-number border-b-2 py-2 rounded-md w-5" />
-                    <button class="bg-blue-300 hover:bg-blue-400 rounded-md h-7">
-                        <p class="texto-bungee text-white text-center text-sm p-1 " style="font-size: 30px;">+</p>
-                    </button>
+            <div class="col-6 d-flex justify-content-center">
+                <div>
+                    <p class="text-center">Estacionou?</p>
+                    <div class="btn-group">
+                        <button type="button" (click)="decrease('form', 'estacionou')" class="btn btn-white btn-sm">-</button>
+                        <input formControlName="estacionou" type="number" class="form-control rounded-pill" value="0"
+                            min="0" max="4">
+                        <button type="button"(click)="increase('form', 'estacionou')" class="btn btn-white btn-sm">+</button>
+                    </div>
                 </div>
             </div>
         </div>
-        <h1 class="texto-bungee text-orange-400 text-center text-sm mb-4 " style="font-size: 20px;">Pontuação Teleoperado
-        </h1>
-        <div class="texto-passion  text-sm font-bold text-center" style="font-size: 16px;">Marcação dos pixels</div>
-        <div class="grid grid-cols-2 grid-rows-2 mb-8 gap-x-4 mt-2" [formGroup]="form">
-            <div class="">
-                <p>
-                    Amarelo:
-                </p>
-                <div class="flex items-center gap-x-2">
-                    <button class="bg-blue-300 hover:bg-blue-400 rounded-md h-7">
-                        <p class="texto-bungee text-white text-center text-sm p-1 " style="font-size: 30px;">-</p>
-                    </button>
-                    <input formControlName="amarelo" type="number"
-                        class="input-number border-zinc-950 border-b-2 py-2 rounded-md w-5" />
-                    <button class="bg-blue-300 hover:bg-blue-400 rounded-md h-7">
-                        <p class="texto-bungee text-white text-center text-sm p-1 " style="font-size: 30px;">+</p>
-                    </button>
+        <h3 class="text-orange-400 text-center mt-4">Pontuação Teleoperado</h3>
+        <div class="text-muted text-center font-weight-bold mb-1">Marcação dos pixels</div>
+        <div [formGroup]="form2" class="row g-2 md:mx-5 md:px-5 mt-2 ">
+            <div class="col-6 d-flex justify-content-center">
+                <div>
+                    <p class="text-center">Amarelo:</p>
+                    <div class="btn-group" role="group" aria-label="Basic example">
+                        <button type="button" (click)="decrease('form2', 'amarelo')"  class="btn btn-white btn-sm">-</button>
+                        <input formControlName="amarelo" type="number" class="form-control rounded-pill" value="0"
+                            min="0" max="4">
+                        <button (click)="increase('form2', 'amarelo')" type="button" class="btn btn-white btn-sm">+</button>
+                    </div>
                 </div>
             </div>
-            <div class="">
-                <p>
-                    Roxo:
-                </p>
-                <div class="flex items-center gap-x-2">
-                    <button class="bg-blue-300 hover:bg-blue-400 rounded-md h-7">
-                        <p class="texto-bungee text-white text-center text-sm p-1 " style="font-size: 30px;">-</p>
-                    </button>
-                    <input formControlName="roxo" type="number"
-                        class="border-zinc-950 input-number border-b-2 py-2 rounded-md w-5" />
-                    <button class="bg-blue-300 hover:bg-blue-400 rounded-md h-7">
-                        <p class="texto-bungee text-white text-center text-sm p-1 " style="font-size: 30px;">+</p>
-                    </button>
+            <div class="col-6 d-flex justify-content-center">
+                <div>
+                    <p class="text-center">Roxo?</p>
+                    <div class="btn-group" role="group" aria-label="Basic example">
+                        <button  (click)="decrease('form2', 'roxo')" type="button" class="btn btn-white btn-sm">-</button>
+                        <input formControlName="roxo" type="number" class="form-control rounded-pill" value="0" min="0"
+                            max="4">
+                        <button type="button" (click)="increase('form2', 'roxo')"  class="btn btn-white btn-sm">+</button>
+                    </div>
                 </div>
             </div>
-            <div class="">
-                <p>
-                    Personalizado?
-                </p>
-                <div class="flex items-center gap-x-2">
-                    <button class="bg-blue-300 hover:bg-blue-400 rounded-md h-7">
-                        <p class="texto-bungee text-white text-center text-sm p-1 " style="font-size: 30px;">-</p>
-                    </button>
-                    <input formControlName="roxo" type="number"
-                        class="border-zinc-950 input-number border-b-2 py-2 rounded-md w-5" />
-                    <button class="bg-blue-300 hover:bg-blue-400 rounded-md h-7">
-                        <p class="texto-bungee text-white text-center text-sm p-1 " style="font-size: 30px;">+</p>
-                    </button>
+            <div class="col-6 d-flex justify-content-center">
+                <div>
+                    <p class="text-center">Personalizado:</p>
+                    <div class="btn-group" role="group" aria-label="Basic example">
+                        <button type="button" (click)="decrease('form2', 'personalizado')" class="btn btn-white btn-sm">-</button>
+                        <input formControlName="personalizado" type="number" class="form-control rounded-pill" value="0"
+                            min="0" max="4">
+                        <button (click)="increase('form2', 'personalizado')" type="button" class="btn btn-white btn-sm">+</button>
+                    </div>
                 </div>
             </div>
-            <div class="">
-                <p>
-                    Estacionou:
-                </p>
-                <div class="flex items-center gap-x-2">
-                    <button class="bg-blue-300 hover:bg-blue-400 rounded-md h-7">
-                        <p class="texto-bungee text-white text-center text-sm p-1 " style="font-size: 30px;">-</p>
-                    </button>
-                    <input formControlName="roxo" type="number"
-                        class="border-zinc-950 input-number border-b-2 py-2 rounded-md w-5" />
-                    <button class="bg-blue-300 hover:bg-blue-400 rounded-md h-7">
-                        <p class="texto-bungee text-white text-center text-sm p-1 " style="font-size: 30px;">+</p>
-                    </button>
+            <div class="col-6 d-flex justify-content-center">
+                <div>
+                    <p class="text-center">Estacionou?</p>
+                    <div class="btn-group">
+                        <button type="button" (click)="decrease('form2', 'estacionou')" class="btn btn-white btn-sm">-</button>
+                        <input formControlName="estacionou" type="number" class="form-control rounded-pill" value="0"
+                            min="0" max="4">
+                        <button type="button"(click)="increase('form2', 'estacionou')" class="btn btn-white btn-sm">+</button>
+                    </div>
                 </div>
             </div>
         </div>
-        <button class="bg-orange-400 hover:bg-blue-300 w-full rounded-md">
-            <h1 class="texto-bungee text-white text-center text-sm p-2" style="font-size: 30px;">Salvar </h1>
+        <button (click)="post()" class="btn btn-primary btn-lg rounded-pill mt-4 p-0 w-100">
+            <h1 class="text-white text-center mb-0">Salvar</h1>
         </button>
     </div>
 </div>
