feat: botão de salvar salvar

--- a/src/app/routes/team-score/team-score.component.html
+++ b/src/app/routes/team-score/team-score.component.html
@@ -97,7 +97,7 @@
             </div>
         </div>
         <button (click)="post()" class="btn btn-primary btn-lg rounded-pill mt-4 p-0 w-100">
-            <h1 class="text-white text-center mb-0">Salvar</h1>
+            <h1 class="text-white text-center">Salvar</h1>
         </button>
     </div>
 </div>
