--- a/src/app/routes/team-score/team-score.component.html
+++ b/src/app/routes/team-score/team-score.component.html
@@ -16,11 +16,8 @@
           <div class="w-25">
 
           </div>
-            <select class="form-select w-50" aria-label="Default select example">
-              <option selected disabled>Selecione o Time</option>
-              <option value="1">One</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
+            <select [formControl]="formTeam" class="form-select w-50" aria-label="Default select example">
+              <option *ngFor="let team of teams" [value]="team.id">{{team.name}}</option>
             </select>
           </form>
   </nav>
