--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div class="vh-100 vw-100 justify-content-center d-flex align-items-center">
-   <router-outlet ></router-outlet>
-   </div>
+<div class=" d-flex flex-column justify-content-center align-items-center">
+   <router-outlet></router-outlet>
+</div>
