--- a/src/app/routes/login/login.component.html
+++ b/src/app/routes/login/login.component.html
@@ -14,6 +14,7 @@
           <label for="senha">Senha</label>
           <input type="password" class="form-control" id="senha" formControlName="pass" />
           <div *ngIf="checkInput('pass', 'required')" class="text-red-700">Senha é obrigatória</div>
+          <div *ngIf="checkInput('pass', 'length')" class="text-red-700">Senha é obrigatória</div>
 
         </div>
         <button (click)="login()" type="submit" class="btn btn-primary w-100">Entrar</button>
